--- a/BSP Tree Demo/Demo.vcxproj
+++ b/BSP Tree Demo/Demo.vcxproj
@@ -10,6 +10,66 @@
       <Platform>Win32</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="src\arcball.cpp" />
+    <ClCompile Include="src\BOUND_3D.CPP" />
+    <ClCompile Include="src\bspnode_3d.cpp" />
+    <ClCompile Include="src\bsptree_3d.cpp" />
+    <ClCompile Include="src\camera_3d.cpp" />
+    <ClCompile Include="src\CUBE.CPP" />
+    <ClCompile Include="src\initapp.cpp" />
+    <ClCompile Include="src\iterator_3d.cpp" />
+    <ClCompile Include="src\listptr_3d.cpp" />
+    <ClCompile Include="src\matrix_3d.cpp" />
+    <ClCompile Include="src\object_3d.cpp" />
+    <ClCompile Include="src\plane_3d.cpp" />
+    <ClCompile Include="src\POINT_2D.CPP" />
+    <ClCompile Include="src\POINT_3D.CPP" />
+    <ClCompile Include="src\polygon_3d.cpp" />
+    <ClCompile Include="src\polylist_3d.cpp" />
+    <ClCompile Include="src\polyptr_3d.cpp" />
+    <ClCompile Include="src\quaternion_3d.cpp" />
+    <ClCompile Include="src\RAY_3D.CPP" />
+    <ClCompile Include="src\rcpolygon_3d.cpp" />
+    <ClCompile Include="src\SPLIT.CPP" />
+    <ClCompile Include="src\transform_3d.cpp" />
+    <ClCompile Include="src\tuple_2d.cpp" />
+    <ClCompile Include="src\tuple_3d.cpp" />
+    <ClCompile Include="src\vector_2d.cpp" />
+    <ClCompile Include="src\vector_3d.cpp" />
+    <ClCompile Include="src\view.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="src\arcball.h" />
+    <ClInclude Include="src\BOUND_3D.H" />
+    <ClInclude Include="src\bspnode_3d.h" />
+    <ClInclude Include="src\bsptree_3d.h" />
+    <ClInclude Include="src\camera_3d.h" />
+    <ClInclude Include="src\COORD.H" />
+    <ClInclude Include="src\CUBE.H" />
+    <ClInclude Include="src\iterator_3d.h" />
+    <ClInclude Include="src\listptr_3d.h" />
+    <ClInclude Include="src\matrix_3d.h" />
+    <ClInclude Include="src\object_3d.h" />
+    <ClInclude Include="src\PLANE_3D.H" />
+    <ClInclude Include="src\POINT_2D.H" />
+    <ClInclude Include="src\POINT_3D.H" />
+    <ClInclude Include="src\polygon_3d.h" />
+    <ClInclude Include="src\polylist_3d.h" />
+    <ClInclude Include="src\polyptr_3d.h" />
+    <ClInclude Include="src\precompile.h" />
+    <ClInclude Include="src\quaternion_3d.h" />
+    <ClInclude Include="src\RAY_3D.H" />
+    <ClInclude Include="src\rcpolygon_3d.h" />
+    <ClInclude Include="src\SPLIT.H" />
+    <ClInclude Include="src\transform_3d.h" />
+    <ClInclude Include="src\TUPLE_2D.H" />
+    <ClInclude Include="src\TUPLE_3D.H" />
+    <ClInclude Include="src\UTILITY.H" />
+    <ClInclude Include="src\vector_2d.h" />
+    <ClInclude Include="src\vector_3d.h" />
+    <ClInclude Include="src\view.h" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{EC10EAB1-9841-40E9-A717-82751B7888E2}</ProjectGuid>
     <RootNamespace>Demo</RootNamespace>
@@ -133,67 +193,6 @@
       <OutputFile>.\Debug/Demo.bsc</OutputFile>
     </Bscmake>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClCompile Include="source\arcball.cpp" />
-    <ClCompile Include="source\bound_3d.cpp" />
-    <ClCompile Include="source\bspnode_3d.cpp" />
-    <ClCompile Include="source\bsptree_3d.cpp" />
-    <ClCompile Include="source\camera_3d.cpp" />
-    <ClCompile Include="source\cube.cpp" />
-    <ClCompile Include="source\initapp.cpp" />
-    <ClCompile Include="source\iterator_3d.cpp" />
-    <ClCompile Include="source\listptr_3d.cpp" />
-    <ClCompile Include="source\matrix_3d.cpp" />
-    <ClCompile Include="source\object_3d.cpp" />
-    <ClCompile Include="source\plane_3d.cpp" />
-    <ClCompile Include="source\point_2d.cpp" />
-    <ClCompile Include="source\point_3d.cpp" />
-    <ClCompile Include="source\polygon_3d.cpp" />
-    <ClCompile Include="source\polylist_3d.cpp" />
-    <ClCompile Include="source\polyptr_3d.cpp" />
-    <ClCompile Include="source\quaternion_3d.cpp" />
-    <ClCompile Include="source\ray_3d.cpp" />
-    <ClCompile Include="source\rcpolygon_3d.cpp" />
-    <ClCompile Include="source\split.cpp" />
-    <ClCompile Include="source\transform_3d.cpp" />
-    <ClCompile Include="source\tuple_2d.cpp" />
-    <ClCompile Include="source\tuple_3d.cpp" />
-    <ClCompile Include="source\vector_2d.cpp" />
-    <ClCompile Include="source\vector_3d.cpp" />
-    <ClCompile Include="source\view.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="INCLUDE\arcball.h" />
-    <ClInclude Include="INCLUDE\BOUND_3D.H" />
-    <ClInclude Include="INCLUDE\bspnode_3d.h" />
-    <ClInclude Include="INCLUDE\bsptree_3d.h" />
-    <ClInclude Include="INCLUDE\camera_3d.h" />
-    <ClInclude Include="INCLUDE\COORD.H" />
-    <ClInclude Include="INCLUDE\CUBE.H" />
-    <ClInclude Include="INCLUDE\iterator_3d.h" />
-    <ClInclude Include="INCLUDE\listptr_3d.h" />
-    <ClInclude Include="INCLUDE\matrix_3d.h" />
-    <ClInclude Include="INCLUDE\object_3d.h" />
-    <ClInclude Include="INCLUDE\PI.H" />
-    <ClInclude Include="INCLUDE\PLANE_3D.H" />
-    <ClInclude Include="INCLUDE\POINT_2D.H" />
-    <ClInclude Include="INCLUDE\POINT_3D.H" />
-    <ClInclude Include="INCLUDE\polygon_3d.h" />
-    <ClInclude Include="INCLUDE\polylist_3d.h" />
-    <ClInclude Include="INCLUDE\polyptr_3d.h" />
-    <ClInclude Include="INCLUDE\precompile.h" />
-    <ClInclude Include="INCLUDE\quaternion_3d.h" />
-    <ClInclude Include="INCLUDE\RAY_3D.H" />
-    <ClInclude Include="INCLUDE\rcpolygon_3d.h" />
-    <ClInclude Include="INCLUDE\SPLIT.H" />
-    <ClInclude Include="INCLUDE\transform_3d.h" />
-    <ClInclude Include="INCLUDE\TUPLE_2D.H" />
-    <ClInclude Include="INCLUDE\TUPLE_3D.H" />
-    <ClInclude Include="INCLUDE\UTILITY.H" />
-    <ClInclude Include="INCLUDE\vector_2d.h" />
-    <ClInclude Include="INCLUDE\vector_3d.h" />
-    <ClInclude Include="INCLUDE\view.h" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
