--- a/BSP Tree Demo/Demo.vcxproj
+++ b/BSP Tree Demo/Demo.vcxproj
@@ -16,22 +16,23 @@
     <ClCompile Include="src\bspnode_3d.cpp" />
     <ClCompile Include="src\bsptree_3d.cpp" />
     <ClCompile Include="src\camera_3d.cpp" />
-    <ClCompile Include="src\CUBE.CPP" />
+    <ClCompile Include="src\counted_object.cpp" />
+    <ClCompile Include="src\cube.cpp" />
     <ClCompile Include="src\initapp.cpp" />
     <ClCompile Include="src\iterator_3d.cpp" />
     <ClCompile Include="src\listptr_3d.cpp" />
     <ClCompile Include="src\matrix_3d.cpp" />
     <ClCompile Include="src\object_3d.cpp" />
     <ClCompile Include="src\plane_3d.cpp" />
-    <ClCompile Include="src\POINT_2D.CPP" />
-    <ClCompile Include="src\POINT_3D.CPP" />
+    <ClCompile Include="src\point_2d.cpp" />
+    <ClCompile Include="src\point_3d.cpp" />
     <ClCompile Include="src\polygon_3d.cpp" />
     <ClCompile Include="src\polylist_3d.cpp" />
     <ClCompile Include="src\polyptr_3d.cpp" />
     <ClCompile Include="src\quaternion_3d.cpp" />
-    <ClCompile Include="src\RAY_3D.CPP" />
+    <ClCompile Include="src\ray_3d.cpp" />
     <ClCompile Include="src\rcpolygon_3d.cpp" />
-    <ClCompile Include="src\SPLIT.CPP" />
+    <ClCompile Include="src\split.cpp" />
     <ClCompile Include="src\transform_3d.cpp" />
     <ClCompile Include="src\tuple_2d.cpp" />
     <ClCompile Include="src\tuple_3d.cpp" />
@@ -45,23 +46,25 @@
     <ClInclude Include="src\bspnode_3d.h" />
     <ClInclude Include="src\bsptree_3d.h" />
     <ClInclude Include="src\camera_3d.h" />
-    <ClInclude Include="src\COORD.H" />
-    <ClInclude Include="src\CUBE.H" />
+    <ClInclude Include="src\coord.h" />
+    <ClInclude Include="src\counted_object.h" />
+    <ClInclude Include="src\cube.h" />
     <ClInclude Include="src\iterator_3d.h" />
     <ClInclude Include="src\listptr_3d.h" />
     <ClInclude Include="src\matrix_3d.h" />
     <ClInclude Include="src\object_3d.h" />
-    <ClInclude Include="src\PLANE_3D.H" />
-    <ClInclude Include="src\POINT_2D.H" />
-    <ClInclude Include="src\POINT_3D.H" />
+    <ClInclude Include="src\plane_3d.h" />
+    <ClInclude Include="src\point_2d.h" />
+    <ClInclude Include="src\point_3d.h" />
     <ClInclude Include="src\polygon_3d.h" />
     <ClInclude Include="src\polylist_3d.h" />
     <ClInclude Include="src\polyptr_3d.h" />
     <ClInclude Include="src\precompile.h" />
+    <ClInclude Include="src\ptr_to.h" />
     <ClInclude Include="src\quaternion_3d.h" />
-    <ClInclude Include="src\RAY_3D.H" />
+    <ClInclude Include="src\ray_3d.h" />
     <ClInclude Include="src\rcpolygon_3d.h" />
-    <ClInclude Include="src\SPLIT.H" />
+    <ClInclude Include="src\split.h" />
     <ClInclude Include="src\transform_3d.h" />
     <ClInclude Include="src\tuple_2d.h" />
     <ClInclude Include="src\tuple_3d.h" />
@@ -69,6 +72,10 @@
     <ClInclude Include="src\vector_2d.h" />
     <ClInclude Include="src\vector_3d.h" />
     <ClInclude Include="src\view.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="src\counted_object.inl" />
+    <None Include="src\ptr_to.inl" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{EC10EAB1-9841-40E9-A717-82751B7888E2}</ProjectGuid>
