--- a/BSP Tree Demo/Demo.vcxproj
+++ b/BSP Tree Demo/Demo.vcxproj
@@ -19,19 +19,15 @@
     <ClCompile Include="src\counted_object.cpp" />
     <ClCompile Include="src\cube.cpp" />
     <ClCompile Include="src\initapp.cpp" />
-    <ClCompile Include="src\iterator_3d.cpp" />
-    <ClCompile Include="src\listptr_3d.cpp" />
     <ClCompile Include="src\matrix_3d.cpp" />
     <ClCompile Include="src\object_3d.cpp" />
     <ClCompile Include="src\plane_3d.cpp" />
     <ClCompile Include="src\point_2d.cpp" />
     <ClCompile Include="src\point_3d.cpp" />
     <ClCompile Include="src\polygon_3d.cpp" />
-    <ClCompile Include="src\polylist_3d.cpp" />
-    <ClCompile Include="src\polyptr_3d.cpp" />
+    <ClCompile Include="src\polygon_list_3d.cpp" />
     <ClCompile Include="src\quaternion_3d.cpp" />
     <ClCompile Include="src\ray_3d.cpp" />
-    <ClCompile Include="src\rcpolygon_3d.cpp" />
     <ClCompile Include="src\split.cpp" />
     <ClCompile Include="src\transform_3d.cpp" />
     <ClCompile Include="src\tuple_2d.cpp" />
@@ -49,21 +45,17 @@
     <ClInclude Include="src\coord.h" />
     <ClInclude Include="src\counted_object.h" />
     <ClInclude Include="src\cube.h" />
-    <ClInclude Include="src\iterator_3d.h" />
-    <ClInclude Include="src\listptr_3d.h" />
     <ClInclude Include="src\matrix_3d.h" />
     <ClInclude Include="src\object_3d.h" />
     <ClInclude Include="src\plane_3d.h" />
     <ClInclude Include="src\point_2d.h" />
     <ClInclude Include="src\point_3d.h" />
     <ClInclude Include="src\polygon_3d.h" />
-    <ClInclude Include="src\polylist_3d.h" />
-    <ClInclude Include="src\polyptr_3d.h" />
+    <ClInclude Include="src\polygon_list_3d.h" />
     <ClInclude Include="src\precompile.h" />
     <ClInclude Include="src\ptr_to.h" />
     <ClInclude Include="src\quaternion_3d.h" />
     <ClInclude Include="src\ray_3d.h" />
-    <ClInclude Include="src\rcpolygon_3d.h" />
     <ClInclude Include="src\split.h" />
     <ClInclude Include="src\transform_3d.h" />
     <ClInclude Include="src\tuple_2d.h" />
